--- a/applicatie/css/styles.css
+++ b/applicatie/css/styles.css
@@ -229,6 +229,17 @@ video {
     background-color: #218838;
 }
 
+.quantity-input {
+    width: 50px; /* Breder of smaller maken afhankelijk van je voorkeur */
+    margin-bottom: 35px; /* Ruimte om de box */
+    margin-left: 10px;
+    padding: 2px; /* Eventueel voor binnenmarges */
+    text-align: center; /* Zorg ervoor dat de tekst gecentreerd is */
+    border: 1px solid #ccc; /* Optionele styling voor de rand */
+    border-radius: 4px; /* Maak de randen iets afgerond, optioneel */
+}
+
+
 
 /*login-rigster Page*/
 .loginContainer {
